[project]
name = "option-greeks-risk-engine"
version = "0.1.0"
description = "Option pricing and Greeks risk engine with validation, stress testing, and SR 11-7 documentation."
authors = ["FinanceCode"]
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
pandas = "^2.0"
numpy = "^2.0"
scipy = "^1.11"
streamlit = "^1.23"
fastapi = "^0.109"
uvicorn = "^0.23"
sqlalchemy = "^2.0"
pytest = {version = "^8.0", optional = true}

[project.optional-dependencies]
all = ["pytest"]
